Creando condicional en ciclo( se debe corregir)

--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
         <section class="section section__forsale">
-            <h1 class="section__title">Propiedades en venta</h1>
+            <h1 class="section__title">Todas las propiedades en venta</h1>
             <div class="section__container">
                 <div class="cards__container" id="section1">
                   
