--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                             </div>
                             <p class="card__price">Precio: $ 5000</p>
                             <div class="card__inportant__info__container">
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info1">
                                     <img src="./assets/images/cigarette.svg" alt=""
                                         class="card__icon card__icon--no-smooking">
                                     <span
                                         class="card__inportant__info__text card__inportant__info__text--no-smooking">No
                                         se permite fumar</span>
                                 </div>
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info2">
                                     <img src="./assets/images/block.svg" alt="" class="card__icon">
                                     <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se
                                         permiten mascotas</span>
@@ -88,13 +88,13 @@
                             </div>
                             <p class="card__price">Precio: $ 1200</p>
                             <div class="card__inportant__info__container">
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info1">
                                     <img src="./assets/images/smoking_rooms_FILL1_wght400_GRAD0_opsz24.svg" alt=""
                                         class="card__icon card__icon--smooking">
                                     <span class="card__inportant__info__text card__inportant__info__text--smooking">Se
                                         permite fumar</span>
                                 </div>
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info2">
                                     <img src="./assets/images/pets.svg" alt="" class="card__icon">
                                     <span class="card__inportant__info__text card__inportant__info__text--pets">Se
                                         permiten mascotas</span>
@@ -121,12 +121,12 @@
                             </div>
                             <p class="card__price">Precio: $ 4500</p>
                             <div class="card__inportant__info__container">
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info1">
                                     <img src="./assets/images/cigarette.svg" alt=""
                                         class="card__icon card__icon--no-smooking">
                                     <span class="card__inportant__info__text">No se permite fumar</span>
                                 </div>
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info2">
                                     <img src="./assets/images/pets.svg" alt="" class="card__icon">
                                     <span class="card__inportant__info__text card__inportant__info__text--pets">Se
                                         permiten mascotas</span>
@@ -161,14 +161,14 @@
                             </div>
                             <p class="card__price">Precio: $ 2000</p>
                             <div class="card__inportant__info__container">
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info1">
                                     <img src="./assets/images/cigarette.svg" alt=""
                                         class="card__icon card__icon--no-smooking">
                                     <span
                                         class="card__inportant__info__text card__inportant__info__text--no-smooking">No
                                         se permite fumar</span>
                                 </div>
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info2">
                                     <img src="./assets/images/pets.svg" alt="" class="card__icon">
                                     <span class="card__inportant__info__text card__inportant__info__text--pets">Se
                                         permiten mascotas</span>
@@ -195,13 +195,13 @@
                             </div>
                             <p class="card__price">Precio: $ 2500</p>
                             <div class="card__inportant__info__container">
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info1">
                                     <img src="./assets/images/smoking_rooms_FILL1_wght400_GRAD0_opsz24.svg" alt=""
                                         class="card__icon card__icon--smooking">
                                     <span class="card__inportant__info__text card__inportant__info__text--smooking">Se
                                         permite fumar</span>
                                 </div>
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info2">
                                     <img src="./assets/images/pets.svg" alt="" class="card__icon">
                                     <span class="card__inportant__info__text card__inportant__info__text--pets">Se
                                         permiten mascotas</span>
@@ -228,12 +228,12 @@
                             </div>
                             <p class="card__price">Precio: $ 2200</p>
                             <div class="card__inportant__info__container">
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info1">
                                     <img src="./assets/images/cigarette.svg" alt=""
                                         class="card__icon card__icon--no-smooking">
                                     <span class="card__inportant__info__text">No se permite fumar</span>
                                 </div>
-                                <div class="card__inportant__info">
+                                <div class="card__inportant__info" id="info2">
                                     <img src="./assets/images/block.svg" alt="" class="card__icon">
                                     <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se
                                         permiten mascotas</span>
