--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="section__container">
                 <div class="cards__container">
                     <div class="card__body__container">
-                        <img src="https://fotos.perfil.com/2018/09/21/trim/950/534/nueva-york-09212018-366965.jpg"
+                        <img src="./assets/images/imagen_1.jpg"
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Apartamento de lujo en zona exclusiva</h1>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="card__body__container">
-                        <img src="https://cdn.bioguia.com/embed/3d0fb0142790e6b90664042cbafcb1581427139/furgoneta.jpg"
+                        <img src="./assets/images/imagen_2.webp"
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Apartamento acogedor en la montaña</h1>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="card__body__container">
-                        <img src="https://resizer.glanacion.com/resizer/fhK-tSVag_8UGJjPMgWrspslPoU=/768x0/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/CUXVMXQE4JD5XIXX4X3PDZAVMY.jpg"
+                        <img src="./assets/images/imagen_3.jpg"
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Penthouse de lujo con terraza panorámica</h1>
@@ -145,7 +145,7 @@
             <div class="section__container">
                 <div class="cards__container">
                     <div class="card__body__container">
-                        <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8YXBhcnRtZW50fGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=700&q=60"
+                        <img src="./assets/images/imagen_4.jpg"
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Apartamento en el centro de la ciudad</h1>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="card__body__container">
-                        <img src="https://images.unsplash.com/photo-1669071192880-0a94316e6e09?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                        <img src="./assets/images/imagen_5.jpg"
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Apartamento luminoso con vista al mar</h1>
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                     <div class="card__body__container">
-                        <img src="https://images.unsplash.com/photo-1567496898669-ee935f5f647a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvbmRvfGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=1000&q=60"
+                        <img src="./assets/images/imagen_6.jpg"
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Condominio moderno en zona residencial</h1>
