--- a/index.html
+++ b/index.html
@@ -35,221 +35,22 @@
         <section class="section section__forsale">
             <h1 class="section__title">Propiedades en venta</h1>
             <div class="section__container">
-                <div class="cards__container">
-                    <div class="card__body__container">
-                        <img src="./assets/images/imagen_1.jpg"
-                            alt="" class="card__img">
-                        <div class="card__body">
-                            <h1 class="card__title">Apartamento de lujo en zona exclusiva</h1>
-                            <p class="card__description">Este apartamento de lujo está ubicado en una exclusiva zona
-                                residencial</p>
-                            <div class="card__direction">
-                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                                <p class="card__text">123 Luxury Lane, Prestige Suburb, CA 45678</p>
-                            </div>
-                            <div class="card__info">
-                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                                <span class="card__info__text">4 Habitaciones |</span>
-                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                                <span class="card__info__text">4 Baños</span>
-                            </div>
-                            <p class="card__price">Precio: $ 5000</p>
-                            <div class="card__inportant__info__container">
-                                <div class="card__inportant__info" id="info1">
-                                    <img src="./assets/images/cigarette.svg" alt=""
-                                        class="card__icon card__icon--no-smooking">
-                                    <span
-                                        class="card__inportant__info__text card__inportant__info__text--no-smooking">No
-                                        se permite fumar</span>
-                                </div>
-                                <div class="card__inportant__info" id="info2">
-                                    <img src="./assets/images/block.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se
-                                        permiten mascotas</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__body__container">
-                        <img src="./assets/images/imagen_2.webp"
-                            alt="" class="card__img">
-                        <div class="card__body">
-                            <h1 class="card__title">Apartamento acogedor en la montaña</h1>
-                            <p class="card__description">Este apartamento acogedor está situado en lo alto de una
-                                montaña con impresionantes vista</p>
-                            <div class="card__direction">
-                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                                <p class="card__text">789 Mountain Road, Summit Peaks, CA 23456</p>
-                            </div>
-                            <div class="card__info">
-                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                                <span class="card__info__text">2 Habitaciones |</span>
-                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                                <span class="card__info__text">1 Baños</span>
-                            </div>
-                            <p class="card__price">Precio: $ 1200</p>
-                            <div class="card__inportant__info__container">
-                                <div class="card__inportant__info" id="info1">
-                                    <img src="./assets/images/smoking_rooms_FILL1_wght400_GRAD0_opsz24.svg" alt=""
-                                        class="card__icon card__icon--smooking">
-                                    <span class="card__inportant__info__text card__inportant__info__text--smooking">Se
-                                        permite fumar</span>
-                                </div>
-                                <div class="card__inportant__info" id="info2">
-                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
-                                        permiten mascotas</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__body__container">
-                        <img src="./assets/images/imagen_3.jpg"
-                            alt="" class="card__img">
-                        <div class="card__body">
-                            <h1 class="card__title">Penthouse de lujo con terraza panorámica</h1>
-                            <p class="card__description">Este penthouse de lujo ofrece una terraza panorámica con vistas
-                                espectaculares</p>
-                            <div class="card__direction">
-                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                                <p class="card__text">567 Skyline Avenue, Skyview City, CA 56789</p>
-                            </div>
-                            <div class="card__info">
-                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                                <span class="card__info__text">3 Habitaciones |</span>
-                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                                <span class="card__info__text">3 Baños</span>
-                            </div>
-                            <p class="card__price">Precio: $ 4500</p>
-                            <div class="card__inportant__info__container">
-                                <div class="card__inportant__info" id="info1">
-                                    <img src="./assets/images/cigarette.svg" alt=""
-                                        class="card__icon card__icon--no-smooking">
-                                    <span class="card__inportant__info__text">No se permite fumar</span>
-                                </div>
-                                <div class="card__inportant__info" id="info2">
-                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
-                                        permiten mascotas</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las
-                propiedades en venta</a>
-                <hr class="separador">
-        </section>
-        <section class="section">
-            <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
-            <div class="section__container">
-                <div class="cards__container">
-                    <div class="card__body__container">
-                        <img src="./assets/images/imagen_4.jpg"
-                            alt="" class="card__img">
-                        <div class="card__body">
-                            <h1 class="card__title">Apartamento en el centro de la ciudad</h1>
-                            <p class="card__description">Este apartamento de 2 habitaciones está ubicado en el corazón
-                                de la ciudad, cerca de todo.</p>
-                            <div class="card__direction">
-                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                                <p class="card__text">123 Main Street, Anytown, CA 91234</p>
-                            </div>
-                            <div class="card__info">
-                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                                <span class="card__info__text">2 Habitaciones |</span>
-                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                                <span class="card__info__text">2 Baños</span>
-                            </div>
-                            <p class="card__price">Precio: $ 2000</p>
-                            <div class="card__inportant__info__container">
-                                <div class="card__inportant__info" id="info1">
-                                    <img src="./assets/images/cigarette.svg" alt=""
-                                        class="card__icon card__icon--no-smooking">
-                                    <span
-                                        class="card__inportant__info__text card__inportant__info__text--no-smooking">No
-                                        se permite fumar</span>
-                                </div>
-                                <div class="card__inportant__info" id="info2">
-                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
-                                        permiten mascotas</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__body__container">
-                        <img src="./assets/images/imagen_5.jpg"
-                            alt="" class="card__img">
-                        <div class="card__body">
-                            <h1 class="card__title">Apartamento luminoso con vista al mar</h1>
-                            <p class="card__description">Este hermoso apartamento ofrece una vista impresionante al mar
-                            </p>
-                            <div class="card__direction">
-                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                                <p class="card__text">456 Ocean Avenue, Seaside Town, CA 56789</p>
-                            </div>
-                            <div class="card__info">
-                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                                <span class="card__info__text">3 Habitaciones |</span>
-                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                                <span class="card__info__text">3 Baños</span>
-                            </div>
-                            <p class="card__price">Precio: $ 2500</p>
-                            <div class="card__inportant__info__container">
-                                <div class="card__inportant__info" id="info1">
-                                    <img src="./assets/images/smoking_rooms_FILL1_wght400_GRAD0_opsz24.svg" alt=""
-                                        class="card__icon card__icon--smooking">
-                                    <span class="card__inportant__info__text card__inportant__info__text--smooking">Se
-                                        permite fumar</span>
-                                </div>
-                                <div class="card__inportant__info" id="info2">
-                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
-                                        permiten mascotas</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card__body__container">
-                        <img src="./assets/images/imagen_6.jpg"
-                            alt="" class="card__img">
-                        <div class="card__body">
-                            <h1 class="card__title">Condominio moderno en zona residencial</h1>
-                            <p class="card__description">Este elegante condominio moderno está ubicado en una tranquila
-                                zona residencial</p>
-                            <div class="card__direction">
-                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                                <p class="card__text">123 Main Street, Anytown, CA 91234</p>
-                            </div>
-                            <div class="card__info">
-                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                                <span class="card__info__text">2 Habitaciones |</span>
-                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                                <span class="card__info__text">2 Baños</span>
-                            </div>
-                            <p class="card__price">Precio: $ 2200</p>
-                            <div class="card__inportant__info__container">
-                                <div class="card__inportant__info" id="info1">
-                                    <img src="./assets/images/cigarette.svg" alt=""
-                                        class="card__icon card__icon--no-smooking">
-                                    <span class="card__inportant__info__text">No se permite fumar</span>
-                                </div>
-                                <div class="card__inportant__info" id="info2">
-                                    <img src="./assets/images/block.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se
-                                        permiten mascotas</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="cards__container" id="section0">
 
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="propiedades_alquiler.html">Ver todas las
-                propiedades en
-                alquiler</a>
+            <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las propiedades en venta</a>
+            <hr class="separador">
+        </section>
+        <section class="section ">
+            <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
+            <div class="section__container">
+                <div class="cards__container" id="section0.5">
+
+
+                </div>
+            </div>
+            <a class="card__section__link card__section__link--for-rent" href="propiedades_alquiler.html">Ver todas las propiedades en alquiler</a>
         </section>
         <footer class="footer">
             <div class="footer__container">
@@ -273,6 +74,7 @@
             </div>
         </footer>
     </div>
+    <script src="./assets/js/script_principal.js"></script>
 </body>
 
 </html>
